feat: add header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <title>Bouncy</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="menu">
+                <div class="logo menu__logo">bouncy</div>
+                <!-- /.logo menu__logo -->
+                    <nav class="nav nav__menu">
+                        <a href="#" class="nav__item">Hello</a>
+                        <a href="#" class="nav__item">About</a>
+                        <a href="#" class="nav__item">Services</a>
+                        <a href="#" class="nav__item">Portfolio</a>
+                        <a href="#" class="nav__item">Team</a>
+                        <a href="#" class="nav__item">Blog</a>
+                        <a href="#" class="nav__item">Contact</a>
+                    </nav>
+            </div>
+            <!-- /.menu -->
+        </div>
+        <!-- /.container -->
+    </header>
+    <!-- /.header -->
+    <section class="promo">
+        <div class="container">
+            <div class="promo__block">
+                <h1 class="title promo__title">we are code cafe</h1>
+                <!-- /.title title__section -->
+                <p class="promo__text"></p>
+                <button class="button__icon-special"></button>
+            </div>
+            <!-- /.promo_block -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.promo -->
 </body>
 </html>
